@@ -228,3 +228,4 @@
  27-Mar-2020  V0.972 Add support for rcsb_repository_holdings_removed.repository_content_types
   1-Apr-2020  V0.973 Add test cases for pdbx_audit_revision_details.description
   1-Apr-2020  V0.974 Add test cases for RESID annotations
+  5-Apr-2020  V0.975 Adjustments to logging details for sequence processing
